[tool.poetry]
name = "jvsnet"
version = "0.1.0"
description = ""
authors = ["Jaeuk Yi <jvvook@gmail.com>"]

[tool.poetry.dependencies]
python = "^3"
numpy = "^1.19.4"
matplotlib = "^3.3.2"
scipy = "^1.5.4"
torch = "^1.7.0"
torchvision = "^0.8.1"
tqdm = "^4.51.0"
numba = "^0.51.2"
pkbar = "^0.5"
tables = "^3.6.1"
h5py = "^3.1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = "^20.8b1"
pylint = "^2.6.0"
notebook = "^6.1.5"
mypy = "^0.790"
tensorboard = "^2.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
